# radio_capture

./: .env.example  .gitignore  Dockerfile  LOGGING.md  README.md  alembic.ini  channels.json.example  daily_radio_summary.py  docker-compose.yaml  pyproject.toml  rebuild  requirements.txt  run_daily_summaries.py  start.sh  start_watcher.sh
.github/: DEPLOYMENT.md
.github/workflows/: deploy.yaml
alembic/: env.py
alembic/versions/: 000_initial_schema.py  001_add_classification_to_recording.py  002_add_asr_to_recording.py  004_add_asr_processing_time.py  004_add_speech_blocks.py
app/: run_watcher.py
app/api/: auth.py  main.py  recordings.py  speech_blocks.py  stats_routes.py  streams.py  ui_routes.py  users.py
app/core/: db.py  logging_config.py
app/models/: models.py
app/services/: asr.py  audio_classifier.py  ffmpeg_builder.py  speech_blocks.py  stats.py  stream_manager.py  telegram.py  watcher.py
app/static/: app.js  style.css
app/templates/: dashboard.html  layout.html  login.html  recordings.html  settings.html  speech_blocks.html  stream_detail.html  stream_edit.html  streams.html  user_edit.html
tests/: test_ffmpeg_builder.py  test_logging.py  test_speech_blocks.py
